# scaling_laws

./: .gitignore  main.py  pyproject.toml
data/hf_runs/: save_hf_runs.py
data/hf_runs_single_epoch/: config.yml  save_hf_runs_single_epoch.py
data/pile-scaling-0.7/: pile-scaling-0.7.csv  process_runs.py
data/pile-scaling-0.8/: config.yml  pile-scaling-0.8.csv  process_runs.py
scaling_laws/: __init__.py  fit.py  plot.py
