[tool.poetry]
name = "scaling-laws"
version = "0.1.0"
description = ""
authors = ["zhangir-azerbayev <zazerbayev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tqdm = "^4.66.1"
numpy = "^1.26.2"
scipy = "^1.11.3"
autograd = "^1.6.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
